Attempting to fix mobile overflow issues - living with it for now

--- a/src/css/resets.scss
+++ b/src/css/resets.scss
@@ -22,7 +22,8 @@
 }
 
 html,
-body {
+body,
+.body {
   margin: 0;
   font-size: var(--fontsize);
   line-height: var(--lineheight);
